Bootstrap Dusk configuration.

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@
 /public/storage
 /storage/*.key
 /vendor
-.env
-.env.backup
+/.env
+/.env.backup
+/.env.dusk
 .phpunit.result.cache
 docker-compose.override.yml
 Homestead.json
